clusters/cluster0/kubernetes/apps/media/sabnzbd/app/sabnzbd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: sabnzbd-port-1
    - port: 9090
      protocol: TCP
      targetPort: 9090
      name: sabnzbd-port-2
