clusters/cluster0/kubernetes/apps/media/sabnzbd/app/sabnzbd-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: sabnzbd.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: sabnzbd-service
            port:
              number: 8080
